--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,14 @@ black==22.1.0
 bleach==4.1.0
 cffi==1.15.0
 click==8.0.3
+cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==0.8.2
+fonttools==4.30.0
 greenlet==1.1.2
 importlib-resources==5.4.0
 ipykernel==6.9.0
@@ -26,7 +28,9 @@ jsonschema==4.4.0
 jupyter-client==7.1.2
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
 mypy-extensions==0.4.3
@@ -44,6 +48,7 @@ parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==9.0.1
 platformdirs==2.5.0
 prometheus-client==0.13.1
 prompt-toolkit==3.0.28
